# soupbin

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  devenv.nix
client/: CMakeLists.txt
client/include/soupbin/: client.hpp  errors.hpp
client/src/: client.cpp  client.hpp  client_impl.cpp  client_impl.hpp
client/src/detail/: config.hpp.in  event_loop.cpp  event_loop.hpp  network.hpp  spsc_ringbuf.cpp  spsc_ringbuf.hpp
client/test/fuzz/: test_spsc_ringbuf.cpp
client/test/unit/: test_spsc_ringbuf.cpp
common/: CMakeLists.txt
common/include/common/: assert.hpp  config.hpp.in  log.hpp  messages.hpp  partial.hpp  types.hpp  util.hpp  verify.hpp
common/src/: messages.cpp
example/: CMakeLists.txt  client.cpp  server.cpp
server/: CMakeLists.txt
server/include/soupbin/: errors.hpp  server.hpp
server/src/: client_store.cpp  client_store.hpp  constants.hpp  server.cpp  server.hpp  server_impl.cpp  server_impl.hpp  types.hpp  verify.hpp
server/src/detail/: client_manager.cpp  client_manager.hpp  client_store.cpp  client_store.hpp  config.hpp.in  constants.hpp  messages.cpp  messages.hpp  network.hpp  partial.hpp  session.cpp  session.hpp  types.hpp  verify.hpp
server/test/: test_client_manager.cpp  test_client_store.cpp  test_session.cpp
server/test/unit/: test_client_store.cpp
